# pgwallah

./: .gitignore  Agents.md  Makefile  README.md  docker-compose.registration.yml  docker-compose.yml
docs/api/: auth.yaml
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/components/nav/: AdminNav.tsx  TenantNav.tsx
frontend/src/components/ui/: tabs.tsx
frontend/src/config/: api.ts
frontend/src/pages/: _app.tsx  dashboard.tsx  demo.tsx  index.tsx
frontend/src/pages/admin/: advance.tsx  index.tsx  invoices.tsx  memberships.tsx  mess.tsx  orders.tsx  pg.tsx  rent.tsx  tenants.tsx
frontend/src/pages/auth/: login.tsx  register.tsx
frontend/src/pages/tenant/: booking.tsx  index.tsx  invoices.tsx  mess.tsx  notifications.tsx  orders.tsx  payments.tsx  profile.tsx
frontend/src/store/: auth-store.ts
frontend/src/styles/: globals.css
frontend/src/types/: auth.ts
gateway/kong/: kong.yml
observability/: prometheus.yml  promtail.yml
observability/grafana/provisioning/datasources/: datasources.yml
services/auth/: .env.example  Dockerfile  Dockerfile.simple  README.md  alembic.ini  pyproject.toml  requirements.txt
services/auth/alembic/: env.py
services/auth/alembic/versions/: 0ccc155d4a22_initial_database_schema.py
services/auth/app/: __init__.py  main.py
services/auth/app/api/: __init__.py  auth.py  health.py
services/auth/app/core/: config.py  database.py  security.py
services/auth/app/models/: __init__.py  user.py
services/auth/app/schemas/: auth.py
services/auth/scripts/: seed_dev.py
services/booking/: Dockerfile  requirements.txt
services/booking/app/: main.py
services/booking/app/api/: health.py  properties.py  requests.py  rooms.py
services/booking/app/core/: __init__.py  database.py
services/booking/app/models/: __init__.py
services/booking/app/schemas/: __init__.py
services/invoicing/: Dockerfile  requirements.txt
services/invoicing/app/: main.py
services/invoicing/app/api/: health.py  invoices.py
services/invoicing/app/core/: config.py
services/invoicing/app/models/: invoice.py
services/mess/: Dockerfile  requirements.txt
services/mess/app/: main.py
services/mess/app/api/: __init__.py  coupons.py  health.py  menu.py
services/mess/app/core/: config.py  database.py
services/mess/app/models/: __init__.py
services/notification/: Dockerfile  requirements.txt
services/notification/app/: main.py
services/notification/app/api/: notifications.py
services/notification/app/core/: __init__.py  database.py
services/notification/app/models/: __init__.py
services/notification/app/schemas/: __init__.py
services/orders/: Dockerfile  requirements.txt
services/orders/app/: main.py
services/orders/app/api/: orders.py
services/orders/app/core/: config.py  database.py
services/orders/app/models/: order.py
services/orders/app/schemas/: order.py
services/orders/app/utils/: events.py  menu.py
services/payment/: Dockerfile  pyproject.toml  requirements.txt
services/payment/app/: main.py
services/payment/app/api/: health.py  payments.py
services/payment/app/core/: config.py  database.py
services/payment/app/integrations/: razorpay_client.py
services/payment/app/models/: payment.py
services/payment/app/schemas/: payment.py
services/payment/app/utils/: events.py  receipts.py
